Move refresh token operation to new token api
